# openfoodfacts-ai

.github/: labeler.yml
GSoC2018/table_detection/: resize.py
ai-emlyon/eml/: datanavig.py  eda.py  model_eval.py  taxonomy.py
ai-emlyon/food_model/: evaluator.py  xgfood.py
ai-emlyon/scripts/: lucain_script_taxonomy.py  merging_script.py
data4good_logo_detection/: setup.py
genai-features/prompts/: vandalism.j2
ingredient_extraction/dataset-generation/: clean_dataset.py
ingredient_extraction/model-analysis/: evaluate_model.py  test_prediction.py
ingredient_extraction/train/: run_pred_colab.py
logo-ann/dataset/: clean_logo_dataset.py  create_logo_dataset.py
logo-ann/generation/: 02_generate_embeddings.py  03_generate_index.py
logo-classifier/: annotate_logos.py  dataset.py  settings.py  to_delete.py  train.py  utils.py  visualize_logos.py
ml_utils/ml_utils_cli/: requirements.txt
nutrisight/: README.md  cli.py  demo.py  test_model.py
nutrisight/dataset/: 10_get_prepared_as_samples.py  1_create_dataset.py  2_create_project.py  3_upload_dataset.py  4_add_batch.py  5_update_checked_field.py  6_push_dataset.py  7_check_errors.py  8_update_errors.py  9_add_checked_field.py  requirements.txt
nutrisight/dataset-generation/: 10_get_prepared_as_samples.py
nutrisight/paper/: paper.tex  references.bib
nutrisight/train/: launch.sh
nutrition-detector/: README.md
nutrition-detector/demo/: app.py
ocr_cleaning/: multiproc_ocr_cleaning.py
receipt-extraction/: README.md  extract_receipt.py  pyproject.toml
spellcheck/old/: SessionState.py  label.py  (+2 more)
(+55 files in other folders)
